<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clipChildren="false"
    android:clipToOutline="false"
    android:clipToPadding="false"
    android:padding="16dp"
    app:cardBackgroundColor="#0062C1"
    app:cardCornerRadius="16dp"
    app:cardElevation="12dp"
    app:contentPadding="10dp"
    app:layout_gravity="clip_horizontal">

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:clipToOutline="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/tvDosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosage"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/tvTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Times"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/tvNextDose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextDose"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginRight="5dp"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            app:backgroundTint="#55A4F0"
            app:elevation="8dp"
            app:rippleColor="#99FFFFFF" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
