<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_meditrack_logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="26sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="26sp" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="#55A4F0"
        android:gravity="center"
        android:textSize="18sp"
        android:clickable="true"
        android:enabled="true"
        app:cornerRadius="8dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/btnLoginSSO"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="#55A4F0"
        android:gravity="center"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        android:text="@string/loginSSO" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:linksClickable="true"
        android:text="@string/register"
        android:textAlignment="center" />

</LinearLayout>