<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0062C1"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="390dp"
            android:layout_height="151dp"
            android:layout_gravity="center"
            android:outlineAmbientShadowColor="#000000"
            app:cardBackgroundColor="#FDFDFD"
            app:cardElevation="4dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.TopSquareBottomRounded">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/ic_settings" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_meditrack_logo" />

        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/TabMenu"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/tab_border"
            android:clickable="true"
            android:elevation="4dp"
            android:fadeScrollbars="false"
            app:tabIndicatorColor="#307BC3"
            app:tabTextColor="#307AC3"
            app:tabPaddingStart="0dp"
            app:tabPaddingEnd="12dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAlignment="center" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminders" />
        </com.google.android.material.tabs.TabLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="349dp"
            android:layout_height="540dp"
            android:layout_gravity="center"
            android:outlineAmbientShadowColor="#000000"
            app:cardBackgroundColor="#FDFDFD"
            app:cardCornerRadius="25dp"
            app:cardElevation="4dp"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="281dp"
                    android:layout_height="51dp"
                    android:layout_gravity="center_horizontal"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="8dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:cardBackgroundColor="#55A4F0"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="4dp"
                    app:cardMaxElevation="4dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical"
                        android:text="@string/search"
                        android:textColor="#FFFFFF"
                        android:textSize="40sp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="56dp"
                        android:layout_height="49dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        app:srcCompat="@drawable/ic_search" />

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="4dp">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/svSearch"
                        android:layout_width="271dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:iconifiedByDefault="false"
                        android:queryHint="@string/searchMedicine" />
                </com.google.android.material.card.MaterialCardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMedicines"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
