<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0062C1"
    app:circularflow_radiusInDP="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0062C1"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="390dp"
            android:layout_height="151dp"
            android:layout_gravity="center"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#FDFDFD"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.TopSquareBottomRounded">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/ic_settings" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_meditrack_logo" />

        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/TabMenu"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/tab_border"
            android:elevation="4dp"
            app:tabIndicatorColor="#307BC3"
            app:tabTextColor="#307AC3"
            app:tabPaddingStart="0dp"
            app:tabPaddingEnd="12dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAlignment="center" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminders" />
        </com.google.android.material.tabs.TabLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="346dp"
            android:layout_height="535dp"
            android:layout_gravity="center_horizontal|top"
            app:cardBackgroundColor="#FDFDFD"
            app:cardCornerRadius="25dp"
            app:cardElevation="4dp"
            app:contentPaddingTop="13dp">

            <LinearLayout
                android:layout_width="335dp"
                android:layout_height="484dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="321dp"
                    android:layout_height="53dp"
                    android:layout_gravity="center|center_horizontal"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="8dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:cardBackgroundColor="#55A4F0"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="4dp"
                    app:cardMaxElevation="4dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="@string/reminders"
                        android:textColor="#FFFFFF"
                        android:textSize="40sp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="56dp"
                        android:layout_height="49dp"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="5dp"
                        app:srcCompat="@drawable/ic_reminder" />

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="340dp"
                    android:layout_height="431dp"
                    android:layout_gravity="center"
                    android:padding="10dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:layout_marginTop="-70dp"
            android:layout_marginRight="40dp"
            app:backgroundTint="#54A3EE"
            app:elevation="10dp"
            app:pressedTranslationZ="16dp"
            app:srcCompat="@drawable/ic_plus"
            app:tint="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
